--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@capacitor/app": "^7.0.0",
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
+    "@capacitor/geolocation": "^7.0.0",
     "@fontsource/archivo-black": "^5.1.1",
     "@fontsource/bebas-neue": "^5.1.1",
     "@fontsource/montserrat": "^5.1.1",
     "@fontsource/outfit": "^5.1.1",
+    "@types/leaflet": "^1.9.16",
+    "leaflet": "^1.9.4",
     "lucide-svelte": "^0.474.0",
     "svelte-spa-router": "^4.0.1"
   }
