--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@fontsource/montserrat": "^5.1.1",
     "@fontsource/outfit": "^5.1.1",
     "@types/leaflet": "^1.9.16",
+    "@types/leaflet-geosearch": "^3.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.1.0",
+    "leaflet-routing-machine": "^3.2.12",
     "lucide-svelte": "^0.474.0",
     "svelte-spa-router": "^4.0.1"
   }
